# AgroMaster

./: CMakeLists.txt  conanfile.py
source/: application.cpp  application.hpp  main.cpp  models.hpp
source/models/: crop.hpp  hothouse.hpp  schedules.hpp  session.cpp  session.hpp  user_account.hpp  works.hpp
source/views/: schedule.cpp  schedule.hpp
